# learning-platform-prototype

./: .env.example  .gitignore  .pre-commit-config.yaml  .tflint.hcl  CLAUDE.md  README.md  docker-compose.yml  requirements-dev.txt  requirements.txt
backend/: Dockerfile  README.md  pyproject.toml
backend/apis/: README.md
backend/apis/analytics/: README.md  pyproject.toml
backend/apis/analytics/docker/: Dockerfile  Makefile  README.md  docker-compose.yml
backend/apis/analytics/lambda/: .env.example  README.md  pyproject.toml
backend/apis/analytics/lambda/src/: __init__.py  main.py
backend/apis/analytics/lambda/src/handlers/: __init__.py  analytics_handler.py
backend/apis/analytics/lambda/src/models/: __init__.py  analytics_models.py
backend/apis/analytics/lambda/src/services/: __init__.py  analytics_service.py  dynamodb_service.py
backend/apis/analytics/lambda/src/utils/: __init__.py  auth.py  cache.py  config.py
backend/apis/analytics/lambda/tests/: __init__.py
backend/apis/analytics/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
backend/apis/records/: README.md  pyproject.toml
backend/apis/records/docker/: Dockerfile  docker-compose.yml
backend/apis/records/lambda/: app.py  main.py
backend/apis/records/terraform/: main.tf  outputs.tf  variables.tf
backend/apis/records/tests/integration/: test_api_integration.py
backend/apis/records/tests/unit/: test_main.py
backend/apis/roadmap/: README.md  pyproject.toml
backend/apis/roadmap/docker/: Dockerfile  docker-compose.yml
backend/apis/roadmap/lambda/: app.py  main.py
backend/apis/roadmap/terraform/: main.tf  outputs.tf  variables.tf
backend/apis/roadmap/tests/: conftest.py  pytest.ini  requirements.txt
backend/apis/roadmap/tests/integration/: test_api_integration.py
backend/apis/roadmap/tests/unit/: test_main.py
backend/apis/slack/: README.md  pyproject.toml
backend/apis/timer/: README.md  pyproject.toml
backend/shared/: README.md
backend/src/: __init__.py  main.py
backend/src/api/v1/: router.py
backend/src/api/v1/endpoints/: analytics.py
backend/src/core/: auth.py  config.py
backend/src/models/: analytics.py
backend/src/services/: analytics_service.py  dynamodb_service.py
backend/tests/unit/api/v1/endpoints/: __init__.py  test_analytics.py
docs/: README.md
frontend/: .env.example  .eslintrc.json  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  test-css-fix.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: records.ts  roadmap.ts
frontend/src/pages/: RecordsTest.tsx  Test.tsx
frontend/src/pages/analytics/: Analytics.tsx
frontend/src/pages/dashboard/: Dashboard.tsx
frontend/src/pages/records/: Records.tsx
frontend/src/pages/roadmap/: Roadmap.tsx
frontend/src/styles/: globals.css
infrastructure/: README.md
scripts/: README.md  init_local_db.py
tests/: README.md
tests/e2e/: README.md  global-setup.js  global-teardown.js  package-lock.json  package.json  playwright.config.js
tests/e2e/tests/api/: analytics.spec.js
tests/e2e/tests/ui/: analytics-dashboard.spec.js
