[tool.poetry]
name = "slack-api"
version = "0.1.0"
description = "Slack integration function for learning platform"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.0"
mangum = "^0.19.0"
boto3 = "^1.35.0"
pydantic = "^2.9.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.12"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
slack-sdk = "^3.33.0"
requests = "^2.32.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^24.10.0"
isort = "^5.13.0"
flake8 = "^7.1.0"
mypy = "^1.13.0"
bandit = "^1.7.10"
moto = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"